adding external link

--- a/myfirst.html
+++ b/myfirst.html
@@ -9,5 +9,8 @@
 
     <img src="https://media.mnn.com/assets/images/2016/02/Dogs-vs-cats-collage.jpg.653x0_q80_crop-smart.jpg">
 
+    <!--Open new link-->
+    <a href="https://www.thesprucepets.com/reasons-dogs-are-better-than-cats-1118371" target="_blank">Why Dogs are Better</a>
+    
 </body>
 </html>
